Create exchanges logic
