# config/routes.rb
@@ -13,5 +13,6 @@ Rails.application.routes.draw do
 
   resources :users do
     resources :wallets, only: [:index, :show]
+    post 'exchange', to: 'exchanges#create'
   end
 end
